# ROS_first_project

./: README.md  usefull.rtf
catkin_ws/: run_in_container.sh
catkin_ws/devel/: local_setup.sh  setup.sh
catkin_ws/devel/include/first_project/: sector_time.h
catkin_ws/devel/lib/first_project/: gps_odometer  odometer  sector_times
catkin_ws/devel/lib/pkgconfig/: first_project.pc
catkin_ws/devel/lib/python3/dist-packages/first_project/msg/: __init__.py  _sector_time.py
catkin_ws/devel/share/common-lisp/ros/first_project/msg/: _package.lisp  _package_sector_time.lisp  first_project-msg.asd  sector_time.lisp
catkin_ws/devel/share/first_project/cmake/: first_project-msg-extras.cmake  first_project-msg-paths.cmake  first_projectConfig.cmake
catkin_ws/devel/share/gennodejs/ros/first_project/msg/: _index.js  sector_time.js
catkin_ws/devel/share/roseus/ros/first_project/: manifest.l
catkin_ws/devel/share/roseus/ros/first_project/msg/: sector_time.l
catkin_ws/src/first_project/: CMakeLists.txt  package.xml
catkin_ws/src/first_project/config/: RVIZ_CONFIG.rviz  config.rviz
catkin_ws/src/first_project/launch/: launch.launch
catkin_ws/src/first_project/msg/: sector_time.msg
catkin_ws/src/first_project/src/: gps_odometer.cpp  gps_odometer_pub_sub.cpp  odometer.cpp  sector_times.cpp
catkin_ws/src/second_project/launch/: launch.launch
catkin_ws/src/second_project/src/: gps_odometer.cpp
data/: my_drive.bag  my_drive.bag.active
